--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <title>Movie Browser - {{details.Title}}</title>
+        <title>Vie Browser - {{details.Title}}</title>
     </head>
     
     <body>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center heading">
-                    <h1>Welcome to Movie Browser</h1>
+                    <h1>Welcome to <span style="color:#337ab7">Vie Browser</span></h1> 
                     <hr>
                 </div>
             </div>
